--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "dependencies": {
     "antd": "^3.15.1",
+    "less": "^3.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,6 +27,8 @@
   ],
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
+    "customize-cra": "^0.2.12",
+    "less-loader": "^4.1.0",
     "react-app-rewired": "^2.1.1"
   }
 }
