--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "electron-resume-viewer",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
+  "DEV": true,
+  "homepage": ".",
   "dependencies": {
     "antd": "^3.15.1",
+    "electron": "^4.1.1",
     "less": "^3.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -14,7 +18,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "electron-start": "electron ."
   },
   "eslintConfig": {
     "extends": "react-app"
