--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "DEV": true,
   "homepage": ".",
   "dependencies": {
+    "ag-grid-community": "^20.2.0",
+    "ag-grid-react": "^20.2.0",
     "antd": "^3.15.1",
     "electron": "^4.1.1",
     "less": "^3.9.0",
