--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "electron-resume-viewer",
+  "description": "Simple Resume Viewer built with React and Electron",
   "version": "0.1.0",
   "private": true,
   "main": "main.js",
   "DEV": true,
   "homepage": ".",
+  "repository": "https://github.com/hyousi/electron-resume-viewer",
+  "author": {
+    "name": "Ze Dang",
+    "email": "4649tz@gmail.com",
+    "url": "https://github.com/hyousi"
+  },
+  "license": "MIT",
   "dependencies": {
-    "ag-grid-community": "^20.2.0",
-    "ag-grid-react": "^20.2.0",
     "antd": "^3.15.1",
-    "electron": "^4.1.1",
     "less": "^3.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -33,9 +38,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "electron": "^4.1.1",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "electron-builder": "^20.39.0",
+    "electron-packager": "^13.1.1",
     "less-loader": "^4.1.0",
-    "react-app-rewired": "^2.1.1"
+    "react-app-rewired": "^2.1.1",
+    "shelljs": "^0.8.3"
   }
 }
